--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title: QianSu
-description: Stylish, Two-Column Jekyll Theme
+description: "欢迎大家来到我的世界!"
 url: https://qiansu.github.io/
 logo: halve.png                                       # Site logo
 locale: "中国——上海"
