--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: QianSu
 description: "欢迎大家来到我的世界!"
 url: https://qiansu.github.io/
-logo: halve.png                                       # Site logo
+logo: me.jpg                                     # Site logo
 locale: "中国——上海"
 
 # Left Block Images
