--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,6 +1,6 @@
 - title: 雅思兰黛-h5
   url: http://htmlpreview.github.io/?https://github.com/QianSu/myProjects/blob/master/EsteeLauder/index.html
-  image: https://github.com/QianSu/QianSu.github.io/tree/master/images/yasilandai.png
+  image: https://raw.githubusercontent.com/QianSu/QianSu.github.io/master/images/yasilandai.png
   completed: true
 
 - title: Moon Jekyll Theme
